Added Media Query for mobile devices

--- a/Conisoft/templates/base.html
+++ b/Conisoft/templates/base.html
@@ -17,6 +17,8 @@
      <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="{% static 'css/templatemo-style.css' %}">
+     {% block style %}
+     {% endblock %}
 </head>
 
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
