--- a/Conisoft/templates/courses.html
+++ b/Conisoft/templates/courses.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
+
+{% block style %}
+<link rel="stylesheet" href="{% static 'css/custom.css' %}">
+{% endblock %}
+
 {% block content %}
 
 <!-- Courses -->
