--- a/Conisoft/templates/register.html
+++ b/Conisoft/templates/register.html
@@ -1,10 +1,15 @@
 {% extends "base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
+
+{% block style %}
+<link rel="stylesheet" href="{% static 'css/custom.css' %}">
+{% endblock %}
 
 {% block content %}
 
 <!-- Register -->
-<div class="container py-5">
+<div id="register-container" class="container py-5">
 	<h1>Register</h1>
 	<form method="POST" enctype='multipart/form-data'>
 		{% csrf_token %}
