--- a/Conisoft/templates/account.html
+++ b/Conisoft/templates/account.html
@@ -27,10 +27,10 @@
 								<a><p class="card-text">{{ user.email }}</p></a>
 								<a><p class="card-text">courses: <br><strong>{{ user.course_1_name }} <br>{{ user.course_2_name }}</strong></p></a>
 								<div class="">
-								{% if user.receipt_photo %}
-									<a href='media/{{ user.receipt }}' class="btn btn-primary btn-sm" style="width: 100%; margin-bottom: 5px; background-color: #ca2216; border-radius: 0;" alt="Missing">View Receipt</a>
+									{% if user.receipt_photo != 'None' %}
+									<a href='media/{{ user.receipt_photo }}' class="btn btn-primary" style="width: 100%; margin-bottom: 5px; background-color: #ca2216; border-radius: 0;" alt="Missing">View Receipt</a>
 								{% else %}
-									<a href='/admin/mainApp/user/{{user.id}}/change/' class="btn btn-outline-primary btn-sm" style="width: 100%; margin-bottom: 5px; background-color: #fc140452; border-radius: 0;" alt="Missing">Receipt Missing</a>
+									<a href='/admin/mainApp/user/{{user.id}}/change/' class="btn btn-outline-primary" style="width: 100%; background-color: #fc140452; margin-bottom: 5px; border-radius: 0;" alt="Missing">No Receipt</a>
 								{% endif %}
 									
 								{% if user.course_1_approval == True %}
