--- a/Conisoft/templates/account.html
+++ b/Conisoft/templates/account.html
@@ -31,7 +31,7 @@
 									<p class="card-text">{{ user.email }}</p>
 								</a>
 								<div style="width: 50%;">
-									<h4>Courses: </h4>
+									<h4>Workshops: </h4>
 									<div style="display: flex; justify-content: space-evenly;">
 										<p><strong style="color: rgb(44, 44, 44);">Name: </strong>{{ user.course_1_name }}</p>
 										<p><strong style="color: rgb(44, 44, 44);">Link: </strong><a href="{{ user.course_1_link }}" style="color: #ca2216; cursor: pointer;">{{ user.course_1_link }}</a></p>
