--- a/Conisoft/templates/adminCourse.html
+++ b/Conisoft/templates/adminCourse.html
@@ -11,24 +11,10 @@
 <section id="courses">
     <div class="container">
         <div class="row">
+
             <div class="col-md-12 col-sm-12">
                 <div class="section-title">
-                    <h2>Workshops <small>Upgrade your skills with newest workshops</small></h2>
-                    <h3>Currently Attending:
-                        {% if user.courses_subscribed != 0 %} 1
-                        {% else %} 0
-                        {% endif %}
-                        / 1
-                    </h3>
-                    <small>(Contact admin to un-enroll from a Workshop)</small>
-
-                    {% if messages %}
-                    <ul class="messages">
-                        {% for message in messages %}
-                        <li>{{ message }}</li>
-                        {% endfor %}
-                    </ul>
-                    {% endif %}
+                    <h2>Workshops</h2>
                 </div>
 
                 {% for object in courses %}
@@ -42,29 +28,19 @@
                                 <div class="courses-price" style="min-width: 100%;">
                                     <h3><a href="#">{{ object.name }}</a></h3>
                                     <p>{{ object.description }}.</p>
-                                    {% if user.is_authenticated %}
-                                    {% if object.id == user.course_1_id or object.id == user.course_2_id %}
-                                    <span class="" style="cursor:pointer;" data-catid="{{ object.id }}"
-                                        data-catname="{{ object.name }}"
-                                        data-catzoom_link="{{ object.zoom_link }}">Attending</span>
-                                    {% elif user.course_1_id != 0 and user.course_2_id != 0 %}
-                                    <span>Both Enrollments Used</span>
-                                    {% else %}
-                                    <span class="subscribe_button" style="cursor:pointer;" data-catid="{{ object.id }}"
-                                        data-catname="{{ object.name }}"
-                                        data-catzoom_link="{{ object.zoom_link }}">Enroll Now</span>
-                                    {% endif %}
-
-                                    {% else %}
-                                    <a href="/login"><span class="">Login to View</span></a>
-                                    {% endif %}
+                                    <h3>Users Attending</h3>
+                                        {% for user in users %}
+                                            {% if user.course_1_name == object.name %}
+                                                <a href="/admin/mainApp/user/{{user.id}}/change/" style="color: #ca2216;">{{ user.Full_Name }}</a>
+                                            {% endif %}
+                                        {% endfor %}
                                 </div>
                                 <div class="courses-date">
                                     <div class="courses-author">
                                         <img src='{{ object.presenter_image.url }}' class="img-responsive" alt="">
                                         <span>{{ object.presenter }}</span>
                                     </div>
-                                    <span><i class="fa fa-calendar"></i>{{ object.date }} {{ object.time }}</span>
+                                    <span><i class="fa fa-calendar"></i>{{ object.date }}</span>
                                     <span><i class="fa fa-clock-o"></i> {{ object.time_length }} Hours</span>
                                 </div>
                             </div>
@@ -84,7 +60,7 @@
 
     $('.subscribe_button').click(function () {
         console.log('activated')
-        var id, name, link
+        var id,name,link
         id = $(this).attr('data-catid');
         name = $(this).attr('data-catname');
         link = $(this).attr('data-catzoom_link');
@@ -98,12 +74,6 @@
                     workshop_name: name,
                     workshop_link: link,
                 },
-                success: function (data) {
-                    location.reload()
-                },
-                error: function(data){
-                    location.reload()
-                }
             }
         )
     })
