--- a/Conisoft/templates/index.html
+++ b/Conisoft/templates/index.html
@@ -13,7 +13,7 @@
 
           <div class="owl-carousel owl-theme home-slider">
                {% for object in carosels %}
-               <div class="item item-second">
+               <div class="item" style="background: url('{{ object.background_image.url }}');">
                     <div class="caption">
                          <div class="container">
                               <div id="slide-text" class="col-md-6 col-sm-12">
@@ -39,7 +39,7 @@
           <div class="row">
                <div class="col-md-12 col-sm-12">
                     <div class="section-title">
-                         <h2>Courses <small>Upgrade your skills with newest workshops</small></h2><a href ="/courses" class="btn btn-lg btn-primary" style=" background-color: #ca2216; border-radius: 0;">View all</a>
+                         <h2>Workshops <small>Upgrade your skills with newest workshops</small></h2><a href ="/courses" class="btn btn-lg btn-primary" style=" background-color: #ca2216; border-radius: 0;">View all</a>
                     </div>
                     
                     <div class="owl-carousel owl-theme owl-courses">
